# MyVOD

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.ai/: Password_reset_config.md  admin-refactor.md  api-plan.md  prd.md  (+13 more)
myVOD/backend/myVOD/: .coverage  conftest.py  dont_use_test_db_connection.py  pyproject.toml
myVOD/backend/myVOD/analytics/: serializers.py  tests.py  urls.py  views.py
myVOD/backend/myVOD/apps/movies/management/commands/: check_genres.py
myVOD/backend/myVOD/movies/: models.py  serializers.py  urls.py  views.py
myVOD/backend/myVOD/movies/management/commands/: populate_genres.py  update_availability_changes.py
myVOD/backend/myVOD/movies/migrations/: 0001_initial.py  0002_auto_20251113_2314.py  0003_genre_alter_aisuggestionbatch_options_and_more.py
myVOD/backend/myVOD/myVOD/: celery.py  serializers.py  settings.py  urls.py  views.py
myVOD/backend/myVOD/myVOD/tests/: test_ai_suggestions.py  test_user_profile.py
myVOD/backend/myVOD/services/: ai_suggestions_service.py  availability_sync_service.py  tmdb_client.py  user_movies_service.py  user_profile_service.py  user_registration_service.py  watchmode_service.py
myVOD/backend/myVOD/services/tests/: test_ai_suggestions_service.py  test_movie_search_service.py  test_user_registration_service.py
myVOD/backend/myVOD/tasks/: movie_tasks.py
myVOD/backend/myVOD/templates/: password_reset_email.html
myVOD/backend/myVOD/user_movies/: serializers.py  tests.py  urls.py  views.py
myVOD/backend/myVOD/users/migrations/: 0001_initial.py
(+550 files in other folders)
